@@ -1,8 +1,9 @@
-2017-04-28
+2017-05-14
 
         * Version 1.3.0 released
         =========================
 
+        Correct set names of spatial GLON/GLAT model parameters (#2113)
         Support "BKG" as name of CTA background template
         Scale optimizer convergence criterion with step size (#2022)
         Put response cube loading and saving in OpenMP critical zone (#2021)
